# gradio-trimap-editor

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
demo/showcase/: app.py  pyproject.toml
demo/vitmatte/: app.py  pyproject.toml
src/trimap_editor/: __init__.py
src/trimap_editor/static/: script.js  style.css  template.html
tests/: _demo.py  _helpers.py  conftest.py  test_component.py  test_morph_resilience.py  test_ui.py
